[project]
name = "thegrandlocus"
version = "0.1.0"
description = "Modernized version of The Grand Locus blog"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Guillaume Filion", email = "guillaume.filion@gmail.com" },
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "google-cloud-datastore",
    "google-cloud-storage",
    "Jinja2",
    "markdown",
    "beautifulsoup4",
    "python-multipart",
    "Pydantic",
    "Authlib",
    "itsdangerous",
    "httpx",
    "google-auth-oauthlib",
    "pydantic-settings",
    "Pygments",
]

[dependency-groups]
dev = [
    "pytest>=8.2.2",
    "pre-commit>=4.2.0",
    "ty",
    "ruff>=0.8",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "src",
    "models",
]
testpaths = [
    "tests",
]
markers = [
    "diskspace: marks tests as requiring disk space (deselect with '-m \"not diskspace\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["."]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = [
    "E501",  # line length (handled by formatter / manual wraps)
    "B008",  # FastAPI Depends() / similar patterns in defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python-version = "3.12"

[tool.ty.analysis]
respect-type-ignore-comments = true

# Gradual adoption: tighten per-rule severities over time (replace with "error" or drop `all`).
[tool.ty.rules]
all = "warn"
